# linalg

./: CMakeLists.txt  Doxyfile.in
benchmark/: CMakeLists.txt  gemm.cpp  time_it.h  time_it.hpp
benchmarks/: gemm.cpp  gemv.cpp
example/: CMakeLists.txt
example/validated_numerics/: CMakeLists.txt  gmw81.cpp
include/: linalg.hpp
include/linalg/: blas.hpp  determinants.hpp  lapack.hpp  operations.hpp  special_matrices.hpp  traits.hpp
include/linalg/blas/: blaze.hpp
include/linalg/factorisations/: cholesky.hpp  gmw81.hpp  ldlt.hpp  tools.hpp
include/linalg/lapack/: blaze.hpp  ublas.hpp
include/linalg/operations/: blaze.hpp  ublas.hpp
include/linalg/special_matrices/: constant_diagonal_matrix.hpp  diagonal_matrix.hpp  identity_matrix.hpp
include/linalg/traits/: blaze.hpp  ublas.hpp
test/: CMakeLists.txt  factorisation.cpp  linear_algebra.cpp  norms.cpp  operations.cpp  special_types.cpp  test_utilities.hpp
